--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:test": "webpack --config webpack.config.test.js",
     "watch": "webpack -w --config webpack.config.js",
+    "watch:html": "onchange \"src/index.html\" -i -- npm run html",
     "watch:test": "webpack -w --config webpack.config.test.js",
-    "lint": "eslint --fix 'src/**/*.+(js|vue)' && eslint --fix 'test/**/*.js'",
+    "html": "cp src/index.html dist/index.html",
+    "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
     "minify": "uglifyjs dist/main.js -c -m -o dist/main.js",
+    "serve": "npm run clean && mkdir dist && run-p watch:html serve:webpack",
+    "serve:webpack": "webpack-dev-server --inline --hot --config webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch Firefox,PhantomJS",
     "test": "run-p watch:test testem",
@@ -36,11 +40,13 @@
     "eslint-plugin-html": "^1.5.2",
     "glob": "^7.0.3",
     "json-loader": "^0.5.4",
+    "onchange": "^2.5.0",
     "power-assert": "^1.3.1",
     "testem": "^1.6.0",
     "uglify-js": "^2.7.0",
     "vue-loader": "^9.3.2",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "vue": "^2.0.0-beta.7",
