--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "json-loader": "^0.5.4",
     "onchange": "^2.5.0",
     "power-assert": "^1.3.1",
+    "sinon": "^2.0.0-pre.2",
     "testem": "^1.6.0",
     "uglify-js": "^2.7.0",
     "vue-loader": "^9.3.2",
