--- a/package.json
+++ b/package.json
@@ -17,13 +17,10 @@
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:test": "webpack --config webpack.config.test.js",
     "watch": "webpack -w --config webpack.config.js",
-    "watch:html": "onchange \"src/index.html\" -i -- npm run html",
     "watch:test": "webpack -w --config webpack.config.test.js",
-    "html": "cp src/index.html dist/index.html",
     "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
     "minify": "uglifyjs dist/main.js -c -m -o dist/main.js",
-    "serve": "npm run clean && mkdir dist && run-p watch:html serve:webpack",
-    "serve:webpack": "webpack-dev-server --inline --hot --config webpack.config.js",
+    "serve": "webpack-dev-server --inline --hot --config webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch Firefox,PhantomJS",
     "test": "run-p watch:test testem",
@@ -43,6 +40,7 @@
     "eslint-plugin-html": "^1.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^7.0.3",
+    "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "onchange": "^2.5.0",
     "power-assert": "^1.3.1",
