--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "build:test": "webpack --config webpack.config.test.js",
     "watch": "webpack -w --config webpack.config.js",
     "watch:test": "webpack -w --config webpack.config.test.js",
-    "release": "run-s test:ci build:prod minify",
+    "release": "run-s test:ci clean build:prod",
     "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
-    "minify": "uglifyjs dist/main.js -c warnings=false -m -o dist/main.js",
     "dev": "webpack-dev-server --inline --hot --quiet --config webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch Firefox",
@@ -43,11 +42,9 @@
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "onchange": "^2.5.0",
     "power-assert": "^1.3.1",
     "sinon": "^2.0.0-pre.2",
     "testem": "^1.6.0",
-    "uglify-js": "^2.7.0",
     "vue-loader": "^9.3.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
