--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "json-loader": "^0.5.4",
     "power-assert": "^1.3.1",
     "sinon": "^2.0.0-pre.2",
+    "style-loader": "^0.13.1",
     "testem": "^1.6.0",
     "vue-loader": "^9.3.2",
     "webpack": "^1.13.1",
