--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:ci": "run-s lint build:test testem:ci"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
@@ -42,6 +43,7 @@
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "postcss-loader": "^0.9.1",
     "power-assert": "^1.3.1",
     "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.13.1",
