--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "k-css": "^1.0.0",
     "vue": "^2.0.0-beta.7",
     "vue-router": "^2.0.0-rc.2",
     "vuex": "^2.0.0-rc.4",
