--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    "npm-run-all": "^2.3.0",
     "postcss-loader": "^0.9.1",
     "power-assert": "^1.3.1",
     "sinon": "^2.0.0-pre.2",
