--- a/template/package.json
+++ b/template/package.json
@@ -44,9 +44,18 @@
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
+    {{#if_eq style "SCSS"}}
+    "node-sass": "^3.8.0",
+    {{/if_eq}}
     "npm-run-all": "^2.3.0",
     "postcss-loader": "^0.9.1",
     "power-assert": "^1.3.1",
+    {{#if_eq template "Pug"}}
+    "pug": "^2.0.0-beta5",
+    {{/if_eq}}
+    {{#if_eq style "SCSS"}}
+    "sass-loader": "^4.0.0",
+    {{/if_eq}}
     "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.13.1",
     "testem": "^1.6.0",
