--- a/template/.eslintrc.yml
+++ b/template/.eslintrc.yml
@@ -4,13 +4,15 @@
   parser: babel-eslint
   env:
     es6: true
-    commonjs: true
-    browser: true
+    node: true
   parserOptions:
     ecmaVersion: 6
     sourceType: module
   plugins:
     - html
+    {{#flow}}
+    - flowtype
+    {{/flow}}
   rules:
     dot-notation: 2
     eqeqeq: [2, smart]
@@ -26,4 +28,8 @@
     quotes: [1, single]
     semi: [1, never]
     strict: [2, global]
+    {{#flow}}
+    flowtype/define-flow-type: 1
+    flowtype/use-flow-type: 1
+    {{/flow}}
 {{/if}}
