--- a/template/package.json
+++ b/template/package.json
@@ -20,18 +20,25 @@
     "watch": "webpack -w --config webpack.config.js",
     "watch:test": "webpack -w --config webpack.config.test.js",
     "release": "run-s test:ci clean build:prod",
+    {{#flow}}
+    "flow": "flow check",
+    {{/flow}}
     "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
-    "dev": "webpack-dev-server --inline --hot --quiet --config webpack.config.js",
+    "dev": "webpack-dev-server --inline --hot --no-info --config webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch Firefox",
     "test": "run-p watch:test testem",
-    "test:ci": "run-s lint build:test testem:ci"
+    "test:ci": "run-s lint {{#flow}}flow {{/flow}}build:test testem:ci"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    {{#flow}}
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    {{/flow}}
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-unassert": "^2.1.1",
     "babel-preset-es2015": "^6.6.0",
@@ -39,8 +46,15 @@
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.0",
+    {{#flow}}
+    "eslint-plugin-flowtype": "^2.16.1",
+    {{/flow}}
     "eslint-plugin-html": "^1.5.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    {{#flow}}
+    "flow-bin": "^0.32.0",
+    "flow-status-webpack-plugin": "^0.1.6",
+    {{/flow}}
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
