--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,7 @@
     "flow": "flow check",
     {{/flow}}
     "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
-    "dev": "webpack-dev-server --inline --hot --no-info --config webpack.config.js",
+    "dev": "webpack-dashboard -- webpack-dev-server --inline --hot --no-info --config webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch Firefox",
     "test": "run-p watch:test testem",
@@ -75,7 +75,7 @@
     "testem": "^1.6.0",
     "vue-loader": "^9.3.2",
     "webpack": "^1.13.1",
-    "webpack-dashboard": "0.0.1",
+    "webpack-dashboard": "^0.1.8",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
