--- a/template/package.json
+++ b/template/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-flowtype": "^2.16.1",
     {{/flow}}
     "eslint-plugin-html": "^1.5.2",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     {{#flow}}
     "flow-bin": "^0.32.0",
     "flow-status-webpack-plugin": "^0.1.6",
@@ -74,9 +74,9 @@
     "style-loader": "^0.13.1",
     "testem": "^1.6.0",
     "vue-loader": "^9.3.2",
-    "webpack": "^1.13.1",
+    "webpack": "^2.1.0-beta.22",
     "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^2.1.0-beta.4"
   },
   "dependencies": {
     "k-css": "^1.0.0",
