--- a/template/.babelrc
+++ b/template/.babelrc
@@ -1,5 +1,7 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    ["es2015", { "module": false }]
+  ],
   "plugins": [
     {{#flow}}
     "transform-class-properties",
