--- a/template/package.json
+++ b/template/package.json
@@ -75,7 +75,7 @@
     "style-loader": "^0.13.1",
     "testem": "^1.6.0",
     "vue-loader": "^9.3.2",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "2.1.0-beta.26",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-server": "^2.1.0-beta.4"
   },
