--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
@@ -37,37 +37,37 @@
     "babel-plugin-unassert": "^2.1.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-power-assert": "^1.0.0",
-    "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
+    "cross-env": "^3.1.4",
+    "css-loader": "^0.26.1",
     "eslint": "^3.0.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-flowtype": "^2.16.1",
     "eslint-plugin-html": "^1.5.2",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "flow-bin": "^0.32.0",
+    "flow-bin": "^0.37.4",
     "flow-status-webpack-plugin": "^0.1.6",
     "glob": "^7.0.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.8.0",
-    "npm-run-all": "^2.3.0",
-    "postcss-loader": "^0.9.1",
+    "node-sass": "^4.1.1",
+    "npm-run-all": "^4.0.0",
+    "postcss-loader": "^1.2.1",
     "power-assert": "^1.3.1",
     "pug": "^2.0.0-beta5",
     "sass-loader": "^4.0.0",
     "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.13.1",
     "testem": "^1.6.0",
-    "vue-loader": "^9.3.2",
-    "webpack": "2.1.0-beta.26",
-    "webpack-dashboard": "^0.1.8",
-    "webpack-dev-server": "^2.1.0-beta.4"
+    "vue-loader": "^10.0.2",
+    "webpack": "^2.2.0-rc.3",
+    "webpack-dashboard": "^0.2.1",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
     "k-css": "^1.0.0",
-    "vue": "^2.0.0-beta.7",
-    "vue-router": "^2.0.0-rc.2",
-    "vuex": "^2.0.0-rc.4",
-    "vuex-router-sync": "^3.0.0"
+    "vue": "^2.1.8",
+    "vue-router": "^2.1.1",
+    "vuex": "^2.1.1",
+    "vuex-router-sync": "^4.1.0"
   }
 }
