--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "babel-preset-power-assert": "^1.0.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
-    "eslint": "^3.0.0",
+    "eslint": "^3.13.0",
+    "eslint-config-ktsn": "^1.0.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-flowtype": "^2.16.1",
     "eslint-plugin-html": "^1.5.2",
