--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,7 +7,7 @@
     ecmaVersion: 6
     sourceType: module
   plugins:
-    - html
+    - vue
     - flowtype
   rules:
     flowtype/define-flow-type: 1
