--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-config-ktsn": "^1.0.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-flowtype": "^2.16.1",
-    "eslint-plugin-html": "^1.5.2",
+    "eslint-plugin-vue": "^1.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "flow-bin": "^0.37.4",
     "flow-status-webpack-plugin": "^0.1.6",
@@ -60,6 +60,7 @@
     "style-loader": "^0.13.1",
     "testem": "^1.6.0",
     "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.8",
     "webpack": "^2.2.0-rc.3",
     "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^2.2.0-rc.0"
