--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "watch:test": "webpack -w --config webpack.config.test.js",
     "release": "run-s test:ci clean build:prod",
     "flow": "flow check",
-    "lint": "eslint --fix \"src/**/*.+(js|vue)\" && eslint --fix \"test/**/*.js\"",
+    "lint": "eslint --ext js,vue src test",
+    "lint:fix": "npm run lint -- --fix",
     "dev": "webpack-dashboard -- webpack-dev-server --inline --hot --no-info --config webpack.config.js",
     "testem": "testem",
-    "testem:ci": "testem ci --launch Firefox",
-    "test": "run-p watch:test testem",
-    "test:ci": "run-s lint flow build:test testem:ci"
+    "testem:ci": "testem ci --launch PhantomJS",
+    "test": "run-s lint flow test:unit",
+    "test:unit": "run-s build:test testem:ci",
+    "test:dev": "run-p watch:test testem"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -39,6 +41,7 @@
     "babel-preset-power-assert": "^1.0.0",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
+    "es6-promise": "^4.0.5",
     "eslint": "^3.13.0",
     "eslint-config-ktsn": "^1.0.0",
     "eslint-loader": "^1.5.0",
