Move webpack configs under scripts/ directory

--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "scripts": {
     "clean": "rm -rf .tmp dist",
-    "build": "webpack --config webpack.config.js",
-    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "build:test": "webpack --config webpack.config.test.js",
-    "watch": "webpack -w --config webpack.config.js",
-    "watch:test": "webpack -w --config webpack.config.test.js",
+    "build": "webpack --config scripts/webpack.config.js",
+    "build:prod": "cross-env NODE_ENV=production webpack --config scripts/webpack.config.js",
+    "build:test": "webpack --config scripts/webpack.config.test.js",
+    "watch": "webpack -w --config scripts/webpack.config.js",
+    "watch:test": "webpack -w --config scripts/webpack.config.test.js",
     "release": "run-s test clean build:prod",
     "flow": "flow check",
     "lint": "eslint --ext js,vue src test",
     "lint:fix": "npm run lint -- --fix",
-    "dev": "webpack-dashboard -- webpack-dev-server --inline --hot --no-info --config webpack.config.js",
+    "dev": "webpack-dashboard -- webpack-dev-server --inline --hot --no-info --config scripts/webpack.config.js",
     "testem": "testem",
     "testem:ci": "testem ci --launch PhantomJS",
     "test": "run-s lint flow test:unit",
