--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "power-assert": "^1.3.1",
     "pug": "^2.0.0-beta5",
     "sass-loader": "^6.0.0",
-    "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.16.0",
+    "testdouble": "^2.1.2",
     "testem": "^1.6.0",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.1.8",
