--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "k-css": "^2.0.0",
     "vue": "^2.1.8",
     "vue-router": "^2.1.1",
-    "vuex": "^2.1.1",
-    "vuex-router-sync": "^4.1.0"
+    "vuex": "^2.1.1"
   }
 }
