--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "clean": "rm -rf .tmp dist",
     "build": "webpack --config scripts/webpack.config.js",
-    "build:prod": "cross-env NODE_ENV=production webpack --config scripts/webpack.config.js",
+    "build:prod": "webpack --config scripts/webpack.config.js --env.production",
     "build:test": "webpack --config scripts/webpack.config.test.js",
     "watch": "webpack -w --config scripts/webpack.config.js",
     "watch:test": "webpack -w --config scripts/webpack.config.test.js",
@@ -39,7 +39,6 @@
     "babel-plugin-unassert": "^2.1.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-power-assert": "^1.0.0",
-    "cross-env": "^4.0.0",
     "css-loader": "^0.28.0",
     "es6-promise": "^4.0.5",
     "eslint": "^3.13.0",
